Questão 5 - Realiza o retorno do saldo atualizado
