# src/Questao5/Application/Queries/GetBalances/GetBalanceQueryHandler.cs
@@ -1,6 +1,7 @@
-﻿using MediatR;
+﻿using System;
+using MediatR;
 using Questao5.Application.Queries.Movements.Models;
-using System;
+using Questao5.Domain.Services;
 using System.Threading;
 using System.Threading.Tasks;
 
@@ -8,8 +9,23 @@ namespace Questao5.Application.Queries.Movements;
 
 public class GetBalanceQueryHandler : IRequestHandler<GetBalanceQuery, GetBalanceQueryResponse>
 {
-    public Task<GetBalanceQueryResponse> Handle(GetBalanceQuery request, CancellationToken cancellationToken)
+    private readonly IMovementService _movementService;
+
+    public GetBalanceQueryHandler(IMovementService movementService)
     {
-        throw new NotImplementedException();
+        _movementService = movementService;
+    }
+
+    public async Task<GetBalanceQueryResponse> Handle(GetBalanceQuery query, CancellationToken cancellationToken)
+    {
+        var account = await _movementService.ValidateAccountAsync(query.AccountNumber);
+
+        return new GetBalanceQueryResponse
+        {
+            AccountNumber = account.Number,
+            Holder = account.Holder,
+            QueryDate = DateTime.UtcNow,
+            Balance = await _movementService.GetBalanceAsync(query.AccountNumber)
+        };
     }
 }
